--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "webpack-dev-server": "^3.1.11"
     },
     "dependencies": {
+        "truncate": "^2.1.0",
         "vue": "^2.5.0",
         "vue-multiselect": "^2.1.6"
     }
